--- a/cmd/controller/app/options/BUILD.bazel
+++ b/cmd/controller/app/options/BUILD.bazel
@@ -24,6 +24,7 @@ go_library(
         "//pkg/controller/certificates/trigger:go_default_library",
         "//pkg/controller/certificatesigningrequests/ca:go_default_library",
         "//pkg/controller/certificatesigningrequests/selfsigned:go_default_library",
+        "//pkg/controller/certificatesigningrequests/vault:go_default_library",
         "//pkg/controller/clusterissuers:go_default_library",
         "//pkg/controller/ingress-shim:go_default_library",
         "//pkg/controller/issuers:go_default_library",
