Fix continuous sync issue for CD systems trying to sync ValidatingWebhookConfiguration on Azure Kubernetes Service.
Fixes #4114

Signed-off-by: John Stewart <john.anthony.stewart@gmail.com>

--- a/deploy/charts/cert-manager/templates/webhook-validating-webhook.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-validating-webhook.yaml
@@ -26,6 +26,8 @@ webhooks:
         operator: "NotIn"
         values:
         - {{ .Release.Namespace }}
+      - key: control-plane
+        operator: DoesNotExist
     rules:
       - apiGroups:
           - "cert-manager.io"
