--- a/pkg/controller/certificates/requestmanager/BUILD.bazel
+++ b/pkg/controller/certificates/requestmanager/BUILD.bazel
@@ -28,6 +28,7 @@ go_library(
         "@io_k8s_client_go//tools/cache:go_default_library",
         "@io_k8s_client_go//tools/record:go_default_library",
         "@io_k8s_client_go//util/workqueue:go_default_library",
+        "@io_k8s_utils//clock:go_default_library",
     ],
 )
 
