--- a/cmd/ctl/cmd/BUILD.bazel
+++ b/cmd/ctl/cmd/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "//cmd/ctl/pkg/create:go_default_library",
         "//cmd/ctl/pkg/deny:go_default_library",
         "//cmd/ctl/pkg/experimental:go_default_library",
+        "//cmd/ctl/pkg/flags:go_default_library",
         "//cmd/ctl/pkg/inspect:go_default_library",
         "//cmd/ctl/pkg/renew:go_default_library",
         "//cmd/ctl/pkg/status:go_default_library",
@@ -18,8 +19,6 @@ go_library(
         "@com_github_spf13_cobra//:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
         "@io_k8s_client_go//plugin/pkg/client/auth:go_default_library",
-        "@io_k8s_klog_v2//:go_default_library",
-        "@io_k8s_kubectl//pkg/cmd/util:go_default_library",
     ],
 )
 
