--- a/deploy/charts/cert-manager/templates/webhook-service.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-service.yaml
@@ -11,6 +11,11 @@ metadata:
     app.kubernetes.io/component: "webhook"
     helm.sh/chart: {{ include "webhook.chart" . }}
 spec:
+  # Allow the K8S API server to reach the webhook server even before its
+  # readiness probes are passing.
+  # This allows the /startupz code in the webhook server to verify that the K8S
+  # API server can connect to it, by performing a dry-run create Certificate.
+  publishNotReadyAddresses: true
   type: {{ .Values.webhook.serviceType }}
   {{- if .Values.webhook.loadBalancerIP }}
   loadBalancerIP: {{ .Values.webhook.loadBalancerIP }}
