--- a/cmd/ctl/pkg/install/BUILD.bazel
+++ b/cmd/ctl/pkg/install/BUILD.bazel
@@ -13,7 +13,10 @@ go_library(
         "//cmd/ctl/pkg/install/helm:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@com_github_spf13_pflag//:go_default_library",
+        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
+        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
+        "@io_k8s_cli_runtime//pkg/resource:go_default_library",
         "@io_k8s_client_go//util/homedir:go_default_library",
         "@io_k8s_kubectl//pkg/cmd/util:go_default_library",
         "@sh_helm_helm_v3//pkg/action:go_default_library",
