--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -39,6 +39,23 @@ global:
     # renewal of a leadership.
     # retryPeriod: 15s
 
+# Each resource is part of one of these 4 components: "crd", "certmanager",
+# "webhook" and "cainjector". Each template filenames is prefixed with the name
+# of the component. This option can be used to only include a subset of the
+# components. This makes it possible to only install the crds and install the other
+# components using another chart deployment. Note that combined, all components
+# have to be selected. This option should ONLY be used to not render a subset
+# of components, NOT to disable a component (that should be done using the relevant
+# "enabled" Helm values).
+components:
+- certmanager
+- webhook
+- cainjector
+# - crd
+
+# DEPRECATED: use components instead!
+# Setting this value to true is the same as adding "crd" to the components list.
+# CRDs will be rendered if "crd" is added to components OR installCRDs is set to true.
 installCRDs: false
 
 replicaCount: 1
