--- a/deploy/charts/cert-manager/templates/cainjector-deployment.yaml
+++ b/deploy/charts/cert-manager/templates/cainjector-deployment.yaml
@@ -1,4 +1,5 @@
-{{- if .Values.cainjector.enabled -}}
+{{- if has "cainjector" .Values.components }}
+{{- if .Values.cainjector.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -98,3 +99,4 @@ spec:
 {{ toYaml . | indent 8 }}
     {{- end }}
 {{- end -}}
+{{- end }}
