--- a/deploy/charts/cert-manager/templates/certmanager-deployment.yaml
+++ b/deploy/charts/cert-manager/templates/certmanager-deployment.yaml
@@ -1,3 +1,4 @@
+{{- if has "certmanager" .Values.components }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -164,4 +165,5 @@ spec:
 {{- if .Values.podDnsConfig }}
       dnsConfig:
 {{ toYaml .Values.podDnsConfig | indent 8 }}
+{{- end }}
 {{- end }}
