--- a/deploy/charts/cert-manager/templates/startupapicheck-rbac.yaml
+++ b/deploy/charts/cert-manager/templates/startupapicheck-rbac.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.startupapicheck.enabled -}}
+{{- if and (has "webhook" .Values.components) .Values.startupapicheck.enabled -}}
 {{- if .Values.global.rbac.create -}}
 # create certificate role
 apiVersion: rbac.authorization.k8s.io/v1
