--- a/deploy/charts/cert-manager/templates/startupapicheck-serviceaccount.yaml
+++ b/deploy/charts/cert-manager/templates/startupapicheck-serviceaccount.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.startupapicheck.enabled -}}
+{{- if and (has "webhook" .Values.components) .Values.startupapicheck.enabled -}}
 {{- if .Values.startupapicheck.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
