--- a/deploy/charts/cert-manager/templates/webhook-mutating-webhook.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-mutating-webhook.yaml
@@ -1,3 +1,4 @@
+{{- if has "webhook" .Values.components }}
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
@@ -52,3 +53,4 @@ webhooks:
         namespace: {{ .Release.Namespace | quote }}
         path: /mutate
       {{- end }}
+{{- end }}
