--- a/deploy/charts/cert-manager/templates/webhook-psp.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-psp.yaml
@@ -1,3 +1,4 @@
+{{- if has "webhook" .Values.components }}
 {{- if .Values.global.podSecurityPolicy.enabled }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
@@ -51,4 +52,5 @@ spec:
     ranges:
     - min: 1000
       max: 1000
+{{- end }}
 {{- end }}
