--- a/deploy/charts/cert-manager/templates/webhook-rbac.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-rbac.yaml
@@ -1,3 +1,4 @@
+{{- if has "webhook" .Values.components }}
 {{- if .Values.global.rbac.create -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -81,3 +82,4 @@ subjects:
   name: {{ template "webhook.serviceAccountName" . }}
   namespace: {{ .Release.Namespace }}
 {{- end -}}
+{{- end }}
