--- a/deploy/charts/cert-manager/templates/webhook-validating-webhook.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-validating-webhook.yaml
@@ -1,3 +1,4 @@
+{{- if has "webhook" .Values.components }}
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
@@ -61,3 +62,4 @@ webhooks:
         namespace: {{ .Release.Namespace | quote }}
         path: /validate
       {{- end }}
+{{- end }}
