--- a/cmd/util/BUILD.bazel
+++ b/cmd/util/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "go_default_library",
     srcs = [
         "context.go",
+        "defaults.go",
         "exit.go",
         "signal.go",
         "signal_posix.go",
