--- a/hack/bin/BUILD.bazel
+++ b/hack/bin/BUILD.bazel
@@ -154,6 +154,16 @@ genrule(
     cmd = "cp $(SRCS) $@",
 )
 
+genrule(
+    name = "fetch_yq",
+    srcs = select({
+        ":darwin": ["@yq_darwin//file"],
+        ":k8": ["@yq_linux//file"],
+    }),
+    outs = ["yq"],
+    cmd = "cp $(SRCS) $@",
+)
+
 config_setting(
     name = "k8",
     values = {"host_cpu": "k8"},
