Pull dependencies for darwin/arm
Also bumps a few dependency versions

Signed-off-by: irbekrm <irbekrm@gmail.com>

--- a/hack/bin/BUILD.bazel
+++ b/hack/bin/BUILD.bazel
@@ -17,6 +17,7 @@ genrule(
     name = "fetch_helm",
     srcs = select({
         ":darwin": ["@helm_darwin//:file"],
+        ":darwin_arm": ["@helm_darwin_arm//:file"],
         ":k8": ["@helm_linux//:file"],
     }),
     outs = ["helm"],
@@ -61,6 +62,7 @@ genrule(
     name = "fetch_kubectl",
     srcs = select({
         ":darwin": ["@kubectl_1_22_darwin//file"],
+        ":darwin_arm": ["@kubectl_1_22_darwin_arm//file"],
         ":k8": ["@kubectl_1_22_linux//file"],
     }),
     outs = ["kubectl"],
@@ -129,6 +131,7 @@ genrule(
     name = "fetch_kind",
     srcs = select({
         ":darwin": ["@kind_darwin//file"],
+        ":darwin_arm": ["@kind_darwin_arm//file"],
         ":k8": ["@kind_linux//file"],
     }),
     outs = ["kind"],
@@ -148,6 +151,7 @@ genrule(
     name = "fetch_ytt",
     srcs = select({
         ":darwin": ["@ytt_darwin//file"],
+        ":darwin_arm": ["@ytt_darwin_arm//file"],
         ":k8": ["@ytt_linux//file"],
     }),
     outs = ["ytt"],
@@ -158,6 +162,7 @@ genrule(
     name = "fetch_yq",
     srcs = select({
         ":darwin": ["@yq_darwin//file"],
+        ":darwin_arm": ["@yq_darwin_arm//file"],
         ":k8": ["@yq_linux//file"],
     }),
     outs = ["yq"],
@@ -173,6 +178,12 @@ config_setting(
 config_setting(
     name = "darwin",
     values = {"host_cpu": "darwin"},
+    visibility = ["//visibility:private"],
+)
+
+config_setting(
+    name = "darwin_arm",
+    values = {"host_cpu": "darwin_arm64"},
     visibility = ["//visibility:private"],
 )
 
