--- a/cmd/ctl/cmd/BUILD.bazel
+++ b/cmd/ctl/cmd/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//cmd/ctl/pkg/approve:go_default_library",
         "//cmd/ctl/pkg/check:go_default_library",
+        "//cmd/ctl/pkg/completion:go_default_library",
         "//cmd/ctl/pkg/convert:go_default_library",
         "//cmd/ctl/pkg/create:go_default_library",
         "//cmd/ctl/pkg/deny:go_default_library",
