--- a/cmd/ctl/pkg/factory/BUILD.bazel
+++ b/cmd/ctl/pkg/factory/BUILD.bazel
@@ -2,12 +2,16 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["factory.go"],
+    srcs = [
+        "factory.go",
+        "validargs.go",
+    ],
     importpath = "github.com/jetstack/cert-manager/cmd/ctl/pkg/factory",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/client/clientset/versioned:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
         "@io_k8s_client_go//kubernetes:go_default_library",
         "@io_k8s_client_go//plugin/pkg/client/auth:go_default_library",
