Adds a warning about sidecar proxy for startup check job
Signed-off-by: irbekrm <irbekrm@gmail.com>

--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -402,6 +402,11 @@ cainjector:
 
 # This startupapicheck is a Helm post-install hook that waits for the webhook
 # endpoints to become available.
+# The check is implemented using a Kubernetes Job- if you are injecting mesh
+# sidecar proxies into cert-manager pods, you probably want to ensure that they
+# are not injected into this Job's pod. Otherwise the installation may time out
+# due to the Job never being completed because the sidecar proxy does not exit.
+# See https://github.com/jetstack/cert-manager/pull/4414 for context.
 startupapicheck:
   enabled: true
 
