--- a/pkg/acme/accounts/BUILD.bazel
+++ b/pkg/acme/accounts/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/acme/client:go_default_library",
+        "//pkg/acme/client/middleware:go_default_library",
         "//pkg/acme/util:go_default_library",
         "//pkg/apis/acme/v1:go_default_library",
         "//pkg/metrics:go_default_library",
