Cleanup hook resources from previous failed installs
Signed-off-by: Richard Wall <richard.wall@jetstack.io>

--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -425,7 +425,7 @@ startupapicheck:
   jobAnnotations:
     helm.sh/hook: post-install
     helm.sh/hook-weight: "1"
-    helm.sh/hook-delete-policy: hook-succeeded
+    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
 
   # Optional additional annotations to add to the startupapicheck Pods
   # podAnnotations: {}
@@ -466,7 +466,7 @@ startupapicheck:
     annotations:
       helm.sh/hook: post-install
       helm.sh/hook-weight: "-5"
-      helm.sh/hook-delete-policy: hook-succeeded
+      helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
 
   serviceAccount:
     # Specifies whether a service account should be created
@@ -480,7 +480,7 @@ startupapicheck:
     annotations:
       helm.sh/hook: post-install
       helm.sh/hook-weight: "-5"
-      helm.sh/hook-delete-policy: hook-succeeded
+      helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
 
     # Automount API credentials for a Service Account.
     automountServiceAccountToken: true
